--- a/SaiBackNodejs/package.json
+++ b/SaiBackNodejs/package.json
@@ -10,13 +10,13 @@
   "author": "Leonardo Mercado WEB",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.3",
     "connect-multiparty": "^2.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.11",
-    "validator": "^13.1.17"
+    "express": "^4.21.2",
+    "firebase-admin": "^13.0.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^3.1.9"
   }
 }
