--- a/SaiBackNodejs/package.json
+++ b/SaiBackNodejs/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "connect-multiparty": "^2.2.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
