--- a/SaiBackNodejs/package.json
+++ b/SaiBackNodejs/package.json
@@ -10,8 +10,6 @@
   "author": "Leonardo Mercado WEB",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "connect-multiparty": "^2.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
@@ -21,7 +19,12 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9"
+    "jest-environment-node": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
   }
 }
