--- a/SaiBackNodejs/package.json
+++ b/SaiBackNodejs/package.json
@@ -24,6 +24,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-mock-req-res": "^1.0.2",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0"
   }
