--- a/SaiBackNodejs/package.json
+++ b/SaiBackNodejs/package.json
@@ -27,6 +27,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-mock-req-res": "^1.0.2",
     "nodemon": "^3.1.9",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "uuid": "^11.1.0"
   }
 }
