--- a/SaiBackNodejs/package.json
+++ b/SaiBackNodejs/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "jest",
-    "test-coverage": "jest --coverage"
+    "test-coverage": "jest --coverage",
+    "test:integration": "jest tests/integration"
   },
   "author": "Leonardo Mercado WEB",
   "license": "MIT",
