Movimiento de carpeta de todo el proyecto 2/2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .vscode/settings.json
-SaiBackNodejs/tests/services/userService.test.js
-SaiBackNodejs/tests/integration/auth.test.js
+/node_modules
+/datab
+firebase.js
+package-lock.json
+.env
+/coverage
+tests/services/userService.test.js
+tests/controllers/userController.test.js
+tests/integration/auth.test.js
