--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "firebase-admin": "^13.0.2",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
@@ -28,6 +31,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-mock-req-res": "^1.0.2",
     "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0",
     "supertest": "^7.0.0",
     "uuid": "^11.1.0"
   }
