--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "validator": "^13.12.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
@@ -32,7 +31,6 @@
     "jest-mock-req-res": "^1.0.2",
     "nodemon": "^3.1.9",
     "pino-pretty": "^13.0.0",
-    "supertest": "^7.0.0",
-    "uuid": "^11.1.0"
+    "supertest": "^7.0.0"
   }
 }
