--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Leonardo Mercado WEB",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
